# music-visualizer

./: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  atoms.ts  audio-controller.ts  index.css  main.tsx  sample-collector.ts
src-rust/: Cargo.toml
src-rust/macros/src/: lib.rs
src-rust/src/: lib.rs  pipeline_arch.md  visualizer.rs
src-rust/src/shaders/: bins.wgsl  pos_to_bins.wgsl  vertex_gen.wgsl
src-rust/src/shaders/fft/: initial.wgsl
src/components/: App.tsx  BottomBar.tsx  DropZone.tsx  LoadingScreen.tsx  Scrubber.tsx  Title.tsx  Visualizer.tsx
src/util/: gradient-util.ts  util.ts
wasm-lib/: Cargo.toml
wasm-lib/src/: lib.rs
