[package]
name = "src-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.114"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.91"
web-sys = { version = "0.3.91", features = [
    "console",
    "HtmlCanvasElement"
]}
encase = "0.12.0"
wgpu = "27.0.1"
