[package]
name = "src-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.91"
web-sys = { version = "0.3.91", features = [
    "console",
    "HtmlCanvasElement"
]}
encase = "0.12.0"
wgpu = { version = "28.0.0", features = ["webgpu"] }
