[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
js-sys = "0.3.90"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Gpu"
]}
